--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,30 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
-    <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
-    <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
+    <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}">
+    <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
+    <link rel="stylesheet" href="//basehold.it/8">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   </head>
   <body>
-    <header>
-      <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
-      <ul class="nav">
-        {%- for nav in collections.nav | reverse -%}
-        <li class="nav-item{% if nav.url == page.url %} nav-item-active{% endif %}"><a href="{{ nav.url | url }}">{{ nav.data.navtitle }}</a></li>
-        {%- endfor -%}
-      </ul>
+    <header class="header">
+      <div class="header__content">
+        <h1 class="site-name">
+          <a class="site-name__link" href="{{ '/' | url }}">
+            {{ metadata.title }}
+          </a>
+        </h1>
+        <nav class="nav">
+          <ul class="nav__list">
+            {%- for nav in collections.nav | reverse -%}
+            <li class="nav__item{% if nav.url == page.url %} nav__item--active{% endif %}">
+              <a class="nav__link" href="{{ nav.url | url }}">
+                {{ nav.data.navtitle }}
+              </a>
+            </li>
+            {%- endfor -%}
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
-      <div class="warning">
-        <ol>
-          <li>Edit the <code>_data/metadata.json</code> with your blog’s information.</li>
-          <li>(Optional) Edit <code>.eleventy.js</code> with your configuration preferences.</li>
-          <li>Delete this message from <code>_includes/layouts/base.njk</code>.</li>
-        </ol>
-        <p><em>This is an <a href="https://www.11ty.io/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a>.</em></p>
-      </div>
-
+    <main{% if templateClass %} class="main typeset {{ templateClass }}"{% endif %}>
       {{ content | safe }}
     </main>
 
