--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="stylesheet" href="//basehold.it/10">
+    <!-- <link rel="stylesheet" href="//basehold.it/10"> -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6735496/6887412/css/fonts.css" />
   </head>
