--- a/index.njk
+++ b/index.njk
@@ -1,10 +1,16 @@
 ---
 layout: layouts/home.njk
 ---
+<p>Hello, I'm Aaron. I'm a web developer building digital products for nearly a decade. I really, <em>really</em> enjoy creating for the web, and I want to make things which are delightful to use.</p>
 
-<h1>Latest 3 Posts</h1>
+<p>I build for humans which means researching and speaking to users. I dig deep to uncover user needs, and then sketch, prototype, test and code my way to a viable solution.</p>
+
+<p>I'm currently working at Headforwards in Cornwall, UK. I'm working in a small, close-knit team building a business intelligence platform for the leisure industry, for our lovely client Plum Data.</p>
+
+<p>You can read a bit about what I have been up to recently in my <a href="{{ '/posts/' | url }}">blog</a>. Here are a few recent posts to get you started:</p>
 
 {% set postslist = collections.posts | head(-3) %}
 {% include "postslist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
+<p>If you have any questions or comments, or if you would just like to say hello, please <a href="mailto:aaron.marr@icloud.com">send me an email</a>. I'd love to hear from you.</p>
+
