--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-    <!-- <link rel="stylesheet" href="//basehold.it/10"> -->
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6735496/6887412/css/fonts.css" />
+    
+    <!-- <link rel="stylesheet" href="//basehold.it/8"> -->    
   </head>
   <body>
     <header class="header">
@@ -38,7 +38,11 @@
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__content">
+        <p>&copy Aaron Marr 2019</p>
+      </div>
+    </footer>
 
     <!-- Current page: {{ page.url | url }} -->
   </body>
