--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ layout: layouts/home.njk
 
 <p>I build for humans which means researching and speaking to users. I dig deep to uncover user needs, and then sketch, prototype, test and code my way to a viable solution.</p>
 
-<p>I'm currently working at Headforwards in Cornwall, UK. I'm working in a small, close-knit team building a business intelligence platform for the leisure industry, for our lovely client Plum Data.</p>
+<p>I'm currently working at Headforwards in Cornwall, UK. I'm working in a small, close-knit team building a business intelligence platform for the leisure industry.</p>
 
 <p>You can read a bit about what I have been up to recently in my <a href="{{ '/posts/' | url }}">blog</a>. Here are a few recent posts to get you started:</p>
 
