--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,10 +9,9 @@
     <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
-    
-    <!-- <link rel="stylesheet" href="//basehold.it/8">     -->
+    <!-- <link rel="stylesheet" href="//basehold.it/10">     -->
   </head>
-  <body>
+  <body class="line-numbers">
     <header class="header">
       <div class="header__content">
         <h1 class="site-name">
