--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,4 +6,6 @@ templateClass: template-post
 
 {{ content | safe }}
 
-<p><a href="{{ '/' | url }}">← Home</a></p>
+<time datetime="{{ date | htmlDateString }}">– {{ date | readableDate }} –</time>
+
+{# <p><a href="{{ '/' | url }}">← Home</a></p> #}
