--- a/css/index.css
+++ b/css/index.css
@@ -83,11 +83,11 @@
   --font-medium: 500;
   --font-normal: 400;
 
-  --tracking-tighter: -0.05em;
-  --tracking-tight: -0.025em;
+  --tracking-tighter: -0.04em;
+  --tracking-tight: -0.02em;
   --tracking-normal: 0;
-  --tracking-wide: 0.025em;
-  --tracking-wider: 0.05em;
+  --tracking-wide: 0.02em;
+  --tracking-wider: 0.04em;
   --tracking-widest: 0.1em;
 
   /**
@@ -110,7 +110,7 @@
   --modular-scale-32: 8rem;
   --modular-scale-64: 16rem;
 
-  --max-width: 33rem;
+  --max-width: 37rem;
 }
 
 
@@ -200,7 +200,11 @@ html {
   font-size: 16px;
 }
 
-@media (min-width: 33rem) {
+body {
+  min-height: 100vh;
+}
+
+/* @media (min-width: 33rem) {
   html {
     font-size: 17px;
   }
@@ -217,7 +221,7 @@ html {
   html {
     font-size: 20px;
   }
-}
+} */
 
 
 .direct-link {
@@ -225,13 +229,14 @@ html {
 }
 
 .header {
-  padding: 0.5rem 1rem 0.4rem;
+  padding: var(--modular-scale-2) var(--modular-scale-4) var(--modular-scale-2);
+  background: var(--gray-9);
 }
 
 @media (min-width: 50rem) {
   .header {
-    padding-left: 2rem;
-    padding-right: 2rem; 
+    padding-left: var(--modular-scale-8);
+    padding-right: var(--modular-scale-8); 
     
   }
 }
@@ -241,7 +246,7 @@ html {
   /* padding-left: 1rem;
   padding-right: 1rem; */
   display: flex;
-  border-bottom: 2px solid var(--gray-9);
+  /* border-bottom: 2px solid var(--gray-9); */
   margin: 0 auto;
   padding-bottom: 0rem;
 }
@@ -259,13 +264,13 @@ html {
   padding: 0;
   font-size: var(--theta);
   display: flex;
-  height: 3rem;
+  height: var(--modular-scale-12);
 }
 
 .site-name__link {
   text-decoration: none;
   align-self: center;
-  color: var(--gray-9);
+  color: var(--gray-4);
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
@@ -294,11 +299,13 @@ html {
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
-  color: var(--gray-9);
+  color: var(--gray-4);
 }
 
 .footer {
-  padding: 3.9rem 0 1.4rem;
+  margin-top: var(--modular-scale-16);
+  padding: var(--modular-scale-4) 0 var(--modular-scale-4);
+  background: var(--gray-9);
 }
 
 .footer__content {
@@ -321,6 +328,13 @@ html {
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
+  color: var(--gray-4);
+  text-align: center;
+  width: 100%;
+}
+
+.footer__content p svg {
+  width: var(--iota);
 }
 
 .post__title {
@@ -362,22 +376,30 @@ pre {
 } */
 
 .typeset h1 {
-  font-size: var(--epsilon);
-  font-family: var(--headline);
+  font-size: var(--delta);
+  font-family: var(--serif);
   margin: 0;
   padding: 0;
   line-height: 1.1;
-  font-weight: 400;
+  font-weight: 700;
   font-style: normal;
-  text-align: left;
+  text-align: center;
+
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
 }
 
 @media (min-width: 40rem) {
   .typeset h1 {
-    font-size: var(--delta);
+    font-size: var(--gamma);
     line-height: 1.21;
+  }
+}
+
+@media (min-width: 50rem) {
+  .typeset h1 {
+    margin-left: -13%;
+    margin-right: -13%;
   }
 }
 
@@ -387,18 +409,18 @@ pre {
 
 @media (min-width: 40rem) {
   .typeset h1 + p {
-    margin-top: 2.45rem;
+    margin-top: 2.4rem;
   }
 }
 
 
 .typeset h2 {
   font-size: var(--zeta);
-  font-family: var(--sans);
+  font-family: var(--serif);
   line-height: 1.25;
   margin: 0;
   padding: 0;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
 }
@@ -476,6 +498,13 @@ pre {
   }
 } */
 
+.typeset time {
+  width: 100%;
+  text-align: center;
+  display: block;
+  margin-top: var(--modular-scale-8);
+  font-size: var(--theta);
+}
 
 .typeset p + p,
 .typeset p + ul {
@@ -492,7 +521,7 @@ pre {
 }
 
 .typeset p + h2 {
-  margin-top: 1.4rem;
+  margin-top: 1.87rem;
 }
 
 .typeset p + h3 {
@@ -581,14 +610,14 @@ pre {
 .typeset aside {
   padding: 0;
   margin: 0;
-  border-left: 2px solid var(--blue-5);
-  background: var(--blue-0);
+  border-left: 2px solid var(--green-5);
+  background: var(--green-0);
   padding: 1rem 1.5rem;
   font-style: italic;
   letter-spacing: var(--tracking-tight);
   font-size: var(--theta);
   line-height: 1.5;
-  color: var(--blue-9);
+  color: var(--grey-9);
   /* margin: 0;
   padding: 0; */
 
@@ -666,6 +695,7 @@ pre {
   font-size: var(-theta);
   /* background: var(--gray-1);
   padding: var(--modular-scale-1); */
+  line-height: 1.3;
 }
 
 .typeset > figure:not(.highlight) {
@@ -710,7 +740,7 @@ pre {
 
 @media (min-width: 40rem) {
   .template-post h1 {
-    margin-top: 0.45rem;
+    margin-top: var(--modular-scale-6)
   }
 }
 
