--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,6 +6,6 @@ templateClass: template-post
 
 {{ content | safe }}
 
-<time datetime="{{ date | htmlDateString }}">– {{ date | readableDate }} –</time>
+<time class="post-date" datetime="{{ date | htmlDateString }}">– {{ date | readableDate }} –</time>
 
 {# <p><a href="{{ '/' | url }}">← Home</a></p> #}
