--- a/css/index.css
+++ b/css/index.css
@@ -73,7 +73,7 @@
    * Fonts
    */
 
-  --serif: "Tiempos Text Test";
+  --serif: "Tiempos Text";
   --sans: "Untitled Sans";
   --headline: "Adieu";
   --mono: "Pitch Sans";
@@ -381,8 +381,8 @@ pre {
   margin: 0;
   padding: 0;
   line-height: 1.1;
-  font-weight: 700;
-  font-style: normal;
+  font-weight: 400;
+  font-style: italic;
   text-align: center;
 
   letter-spacing: var(--tracking-tight);
@@ -420,7 +420,8 @@ pre {
   line-height: 1.25;
   margin: 0;
   padding: 0;
-  font-weight: 700;
+  font-weight: 400;
+  font-style: italic;
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
 }
@@ -498,7 +499,7 @@ pre {
   }
 } */
 
-.typeset time {
+.typeset > .post-date {
   width: 100%;
   text-align: center;
   display: block;
@@ -537,7 +538,7 @@ pre {
 }
 
 .typeset a {
-  color: var(--gray-9);
+  color: var(--blue-4);
 }
 
 .typeset a:hover {
@@ -547,7 +548,7 @@ pre {
 .typeset a:hover,
 .typeset a:active,
 .typeset a:visited {
-  color: var(--gray-9);
+  color: var(--blue-7);
 }
 
 .typeset ul {
