--- a/archive.njk
+++ b/archive.njk
@@ -4,7 +4,8 @@ tags:
   - nav
 navtitle: Blog
 permalink: /posts/
+templateClass: template-archive
 ---
-
+<h1>Blog</h1>
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
