--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 templateClass: template-post
 ---
-<h1>{{ title }}</h1>
+<h1 class="post-title text-center">{{ title }}</h1>
 
 {{ content | safe }}
 
