--- a/css/index.css
+++ b/css/index.css
@@ -187,6 +187,24 @@
 }
 
 @font-face {
+  font-family: "Tiempos Text";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../fonts/TiemposTextWeb-Bold.woff2") format("woff2"),
+       url("../fonts/TiemposTextWeb-Bold.woff") format("woff"),
+       url("../fonts/TiemposTextWeb-Bold.eot") format("eot");
+}
+
+@font-face {
+  font-family: "Tiempos Text";
+  font-weight: 700;
+  font-style: italic;
+  src: url("../fonts/TiemposTextWeb-BoldItalic.woff2") format("woff2"),
+       url("../fonts/TiemposTextWeb-BoldItalic.woff") format("woff"),
+       url("../fonts/TiemposTextWeb-BoldItalic.eot") format("eot");
+}
+
+@font-face {
   font-family: "Adieu";
   font-weight: 400;
   font-style: normal;
@@ -196,8 +214,9 @@
 }
 
 html {
-  font-family: var(--sans);
+  font-family: var(--serif);
   font-size: 16px;
+  font-weight: 400;
 }
 
 body {
@@ -230,7 +249,7 @@ body {
 
 .header {
   padding: var(--modular-scale-2) var(--modular-scale-4) var(--modular-scale-2);
-  background: var(--gray-9);
+  background: var(--gray-3);
 }
 
 @media (min-width: 50rem) {
@@ -270,7 +289,7 @@ body {
 .site-name__link {
   text-decoration: none;
   align-self: center;
-  color: var(--gray-4);
+  color: var(--gray-9);
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
@@ -299,7 +318,7 @@ body {
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
-  color: var(--gray-4);
+  color: var(--gray-9);
 }
 
 .footer {
@@ -380,13 +399,17 @@ pre {
   font-family: var(--serif);
   margin: 0;
   padding: 0;
-  line-height: 1.1;
-  font-weight: 400;
-  font-style: italic;
-  text-align: center;
+  line-height: 1.3;
+  font-weight: 700;
+  font-style: normal;
+  
 
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
+}
+
+.text-center {
+  text-align: center;
 }
 
 @media (min-width: 40rem) {
@@ -397,19 +420,21 @@ pre {
 }
 
 @media (min-width: 50rem) {
-  .typeset h1 {
+  .typeset .post-title {
     margin-left: -13%;
     margin-right: -13%;
   }
 }
 
-.typeset h1 + p {
+.typeset h1 + p,
+.typeset h1 + ul {
   margin-top: 2.15rem;
 }
 
 @media (min-width: 40rem) {
-  .typeset h1 + p {
-    margin-top: 2.4rem;
+  .typeset h1 + p,
+  .typeset h1 + ul {
+    margin-top: 2.9rem;
   }
 }
 
@@ -420,8 +445,8 @@ pre {
   line-height: 1.25;
   margin: 0;
   padding: 0;
-  font-weight: 400;
-  font-style: italic;
+  font-weight: 700;
+  font-style: normal;
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
 }
@@ -503,8 +528,9 @@ pre {
   width: 100%;
   text-align: center;
   display: block;
+  font-family: var(--sans);
   margin-top: var(--modular-scale-8);
-  font-size: var(--theta);
+  font-size: var(--iota);
 }
 
 .typeset p + p,
@@ -581,8 +607,16 @@ pre {
   color: var(--gray-7);
 }
 
+.typeset ul li a,
+.typeset ul li a:hover,
+.typeset ul li a:active,
+.typeset ul li a:visited {
+  color: var(--gray-9);
+}
+
 .typeset ul li time {
   font-size: var(--iota);
+  font-family: var(--serif);
   font-style: italic;
   letter-spacing: var(--tracking-tight);
 }
@@ -735,12 +769,14 @@ pre {
   margin-top: 1.87rem;
 }
 
-.template-post h1 {
-  margin-top: 0.35rem;
+.template-post h1,
+.template-archive h1 {
+  margin-top: 0;
 }
 
 @media (min-width: 40rem) {
-  .template-post h1 {
+  .template-post h1,
+  .template-archive h1  {
     margin-top: var(--modular-scale-6)
   }
 }
