--- a/css/index.css
+++ b/css/index.css
@@ -353,7 +353,7 @@ pre {
   padding: 0;
   line-height: 1.3;
   font-weight: 700;
-  font-style: normal;
+  font-style: italic;
   letter-spacing: var(--tracking-tight);
   color: var(--gray-9);
 }
