--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,12 +6,12 @@
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}?v=6">
-    <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}?v=6">
+    <link type="text/css" rel="stylesheet" href="{{ '/build/index.css' | url }}?v=7">
+    <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}?v=7">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <!-- <link rel="stylesheet" href="//basehold.it/8">     -->
   </head>
-  <body class="line-numbers">
+  <body class="line-numbers dark">
     {% set postslist = collections.posts | head(-3) %}
 
     <header class="header">
