--- a/css/index.css
+++ b/css/index.css
@@ -212,10 +212,11 @@ html {
 
 body {
   min-height: 100vh;
+  background: var(--gray-0);
 }
 
 body.dark {
-  background: var(--black);
+  background: var(--gray-9);
   color: var(--white);
 }
 
@@ -231,7 +232,7 @@ pre {
 
 .header {
   padding: var(--modular-scale-2) var(--modular-scale-4) var(--modular-scale-2);
-  background: var(--gray-2);
+  background: var(--gray-0);
 }
 
 .dark .header {
@@ -305,6 +306,10 @@ pre {
 .footer {
   margin-top: var(--modular-scale-16);
   padding: var(--modular-scale-4) 0 var(--modular-scale-4);
+  background: var(--gray-0);
+}
+
+.dark .footer {
   background: var(--gray-9);
 }
 
@@ -328,9 +333,13 @@ pre {
   font-family: var(--sans);
   font-weight: 400;
   font-size: var(--iota);
-  color: var(--gray-4);
+  color: var(--gray-8);
   text-align: center;
   width: 100%;
+}
+
+.dark .footer__content p {
+  color: var(--gray-4);
 }
 
 .footer__content p svg {
@@ -345,7 +354,7 @@ pre {
   max-width: var(--max-width);
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 3.5rem;
+  padding-top: 3.6rem;
 
   margin: 0 auto;
 }
@@ -367,7 +376,7 @@ pre {
   font-family: var(--sans);
   margin: 0;
   padding: 0;
-  line-height: 1.3;
+  line-height: 1.22;
   font-weight: 400;
   font-style: normal;
   letter-spacing: var(--tracking-tight);
@@ -404,7 +413,7 @@ pre {
 @media (min-width: 40rem) {
   .typeset h1 + p,
   .typeset h1 + ul {
-    margin-top: 2.9rem;
+    margin-top: 2.75rem;
   }
 }
 
@@ -427,12 +436,12 @@ pre {
 @media (min-width: 40rem) {
   .typeset h2 {
     font-size: var(--epsilon);
-    line-height: 1.25;
+    line-height: 1.24;
   }
 }
 
 .typeset h2 + p {
-  margin-top: 1rem;
+  margin-top: 1.2rem;
 }
 
 .typeset h3 {
@@ -501,7 +510,7 @@ pre {
 }
 
 .dark .typeset p {
-  color: var(--gray-3);
+  color: var(--gray-4);
 }
 
 .typeset p img {
@@ -521,7 +530,7 @@ pre {
 
 .typeset p + p,
 .typeset p + ul {
-  margin-top: 1rem;
+  margin-top: 1.2rem;
 }
 
 .typeset p + pre,
@@ -534,7 +543,7 @@ pre {
 }
 
 .typeset p + h2 {
-  margin-top: 1.87rem;
+  margin-top: 1.9rem;
 }
 
 .typeset p + h3 {
@@ -546,7 +555,7 @@ pre {
 }
 
 .typeset p + aside {
-  margin-top: 1.1rem;
+  margin-top: 1.6rem;
 }
 
 .typeset a {
@@ -630,14 +639,20 @@ pre {
 .typeset aside {
   padding: 0;
   margin: 0;
-  border-left: 4px solid var(--green-4);
-  background: var(--green-9);
-  padding: 1rem 1.5rem;
+  border-left: 4px solid var(--green-6);
+  background: var(--green-2);
+  padding: 1.15rem 1.5rem;
   font-style: italic;
   letter-spacing: var(--tracking-tight);
   font-size: var(--theta);
   line-height: 1.5;
-  color: var(--grey-0);
+  color: var(--gray-9);
+}
+
+.dark .typeset aside {
+  border-left: 4px solid var(--green-4);
+  background: var(--green-9);
+  color: var(--gray-0);
 }
 
 .typeset aside a {
@@ -662,7 +677,7 @@ pre {
 }
 
 .typeset aside + p {
-  margin-top: 1.4rem;
+  margin-top: 1.6rem;
 }
 
 .typeset em {
@@ -764,3 +779,345 @@ pre {
 .hidden {
   display: none;
 }
+
+
+
+
+
+
+
+
+
+
+/**
+ * VS theme by Andrew Lock (https://andrewlock.net)
+ * Inspired by Visual Studio syntax coloring
+ */
+
+ code[class*="language-"],
+ pre[class*="language-"] {
+     color: var(--gray-8);
+     font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+     direction: ltr;
+     text-align: left;
+     white-space: pre;
+     word-spacing: normal;
+     word-break: normal;
+     font-size: 0.95em;
+     line-height: 1.2em;
+ 
+     -moz-tab-size: 4;
+     -o-tab-size: 4;
+     tab-size: 4;
+ 
+     -webkit-hyphens: none;
+     -moz-hyphens: none;
+     -ms-hyphens: none;
+     hyphens: none;
+ }
+ 
+ pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+ code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+     background: #C1DEF1;
+ }
+ 
+ pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+ code[class*="language-"]::selection, code[class*="language-"] ::selection {
+     background: #C1DEF1;
+ }
+ 
+ /* Code blocks */
+ pre[class*="language-"] {
+     padding: 1em;
+     margin: .5em 0;
+     overflow: auto;
+     /* border: 1px solid #dddddd; */
+     background-color: var(--gray-2);
+ }
+ 
+ /* Inline code */
+ :not(pre) > code[class*="language-"] {
+     padding: .2em;
+     padding-top: 1px; padding-bottom: 1px;
+     background: #f8f8f8;
+     border: 1px solid #dddddd;
+ }
+ 
+
+
+
+
+
+
+
+
+ .token.comment,
+ .token.prolog,
+ .token.doctype,
+ .token.cdata {
+     color: #008000; font-style: italic;
+ }
+ 
+ .token.namespace {
+     opacity: .7;
+ }
+ 
+ .token.string {
+     color: #A31515;
+ }
+ 
+ .token.punctuation,
+ .token.operator {
+     color: #393A34; /* no highlight */
+ }
+ 
+ .token.url,
+ .token.symbol,
+ .token.number,
+ .token.boolean,
+ .token.variable,
+ .token.constant,
+ .token.inserted {
+     color: #36acaa;
+ }
+ 
+ .token.atrule,
+ .token.keyword,
+ .token.attr-value,
+ .language-autohotkey .token.selector,
+ .language-json .token.boolean, 
+ .language-json .token.number, 
+ code[class*="language-css"]{
+     color: #0000ff;
+ }
+ 
+ .token.function {
+     color: #393A34;
+ }
+ .token.deleted,
+ .language-autohotkey .token.tag {
+     color: #9a050f;
+ }
+ 
+ .token.selector,
+ .language-autohotkey .token.keyword {
+     color: #00009f;
+ }
+ 
+ .token.important,
+ .token.bold {
+     font-weight: bold;
+ }
+ 
+ .token.italic {
+     font-style: italic;
+ }
+ 
+ .token.class-name,
+ .language-json .token.property {
+     color: #2B91AF;
+ }
+ 
+ .token.tag,
+ .token.selector {
+     color: #800000;
+ }
+ 
+ .token.attr-name,
+ .token.property,
+ .token.regex,
+ .token.entity {
+     color: #ff0000;
+ }
+ 
+ .token.directive.tag  .tag {
+     background: #ffff00;
+     color: #393A34;
+ }
+ 
+ /* overrides color-values for the Line Numbers plugin
+  * http://prismjs.com/plugins/line-numbers/
+  */
+ .line-numbers .line-numbers-rows {
+   border-right-color: #a5a5a5;
+ }
+ 
+ .line-numbers-rows > span:before {
+   color: #2B91AF;
+ }
+ 
+ /* overrides color-values for the Line Highlight plugin
+ * http://prismjs.com/plugins/line-highlight/
+ */
+ .line-highlight {
+   background: rgba(193, 222, 241, 0.2);
+   background: -webkit-linear-gradient(left, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
+   background: linear-gradient(to right, rgba(193, 222, 241, 0.2) 70%, rgba(221, 222, 241, 0));
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/**
+ * atom-dark theme for `prism.js`
+ * Based on Atom's `atom-dark` theme: https://github.com/atom/atom-dark-syntax
+ * @author Joe Gibson (@gibsjose)
+ */
+
+ .dark code[class*="language-"],
+ .dark pre[class*="language-"] {
+	 color: var(--gray-3);
+	 /* text-shadow: 0 1px rgba(0, 0, 0, 0.3); */
+	 /* font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace; */
+	 direction: ltr;
+	 text-align: left;
+	 white-space: pre;
+	 word-spacing: normal;
+	 word-break: normal;
+	 line-height: 1.5;
+ 
+	 -moz-tab-size: 4;
+	 -o-tab-size: 4;
+	 tab-size: 4;
+ 
+	 -webkit-hyphens: none;
+	 -moz-hyphens: none;
+	 -ms-hyphens: none;
+	 hyphens: none;
+ }
+ 
+ /* Code blocks */
+ .dark pre[class*="language-"] {
+	 /* padding: 1em; */
+	 /* margin: .5em 0; */
+	 overflow: auto;
+	 border-radius: 0.3em;
+ }
+ 
+ .dark :not(pre) > code[class*="language-"],
+ .dark pre[class*="language-"] {
+	 background: #1d1f21;
+ }
+ 
+ /* Inline code */
+ .dark :not(pre) > code[class*="language-"] {
+	 padding: .1em;
+	 border-radius: .3em;
+ }
+ 
+ .dark .token.comment,
+ .dark .token.prolog,
+ .dark .token.doctype,
+ .dark .token.cdata {
+	 color: #7C7C7C;
+ }
+ 
+ .dark .token.punctuation {
+	 color: #c5c8c6;
+ }
+ 
+ .dark .namespace {
+	 opacity: .7;
+ }
+ 
+ .dark .token.property,
+ .dark .token.keyword,
+ .dark .token.tag {
+	 color: #96CBFE;
+ }
+ 
+ .dark .token.class-name {
+	 color: #FFFFB6;
+	 text-decoration: underline;
+ }
+ 
+ .dark .token.boolean,
+ .dark .token.constant {
+	 color: #99CC99;
+ }
+ 
+ .dark .token.symbol,
+ .dark .token.deleted {
+	 color: #f92672;
+ }
+ 
+ .dark .token.number {
+	 color: #FF73FD;
+ }
+ 
+ .dark .token.selector,
+ .dark .token.attr-name,
+ .dark .token.string,
+ .dark .token.char,
+ .dark .token.builtin,
+ .dark .token.inserted {
+	 color: #A8FF60;
+ }
+ 
+ .dark .token.variable {
+	 color: #C6C5FE;
+ }
+ 
+ .dark .token.operator {
+	 color: #EDEDED;
+ }
+ 
+ .dark .token.entity {
+	 color: #FFFFB6;
+	 /* text-decoration: underline; */
+ }
+ 
+ .dark .token.url {
+	 color: #96CBFE;
+ }
+ 
+ .dark .language-css .token.string,
+ .dark .style .token.string {
+	 color: #87C38A;
+ }
+ 
+ .dark .token.atrule,
+ .dark .token.attr-value {
+	 color: #F9EE98;
+ }
+ 
+ .dark .token.function {
+	 color: #DAD085;
+ }
+ 
+ .dark .token.regex {
+	 color: #E9C062;
+ }
+ 
+ .dark .token.important {
+	 color: #fd971f;
+ }
+ 
+ .dark .token.important,
+ .dark .token.bold {
+	 font-weight: bold;
+ }
+ .dark .token.italic {
+	 font-style: italic;
+ }
+ 
+ .dark .token.entity {
+	 cursor: help;
+ }
